//
//  K.swift
//  BabyTracker
//
//  Created by gamzeakyuz on 14.12.2025.
//


import Foundation

struct K {
    
    struct Identifiers {
        static let addLogButton = "addLogButton"
        static let saveButton = "saveButton"
        static let amountField = "amountField"
        static let profileNameField = "profileNameField"
        static let saveProfileButton = "saveProfileButton"
        static let onboardingStartButton = "onboardingStartButton"
    }
    
    struct Defaults {
        static let babyName = "Baby"
        static let currency = "ml"
    }
}
